<resources>
    <string name="app_name">TrackMyExpense</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addtransaction">Add a transaction</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="submit">Submit</string>
</resources>
