<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTransactionActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/TextAddTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addtransaction"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/edit_date"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/edit_amount"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/edit_category"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent">
        </EditText>

        <Button
            android:id="@+id/button_add_transaction"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="submitTransaction"
            android:layout_width="fill_parent">
        </Button>

    </LinearLayout>

</ScrollView>