<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date">
    </TextView>

    <TextView
        android:id="@+id/text_expense_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/expense_name">
    </TextView>

    <TextView
        android:id="@+id/text_expense_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/amount">
    </TextView>

    <TextView
        android:id="@+id/text_expense_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category">
    </TextView>

</androidx.appcompat.widget.LinearLayoutCompat>